cursive-bootstrap/tests/ui/E-CON/E-CON-0263.cursive
// RUN: compile-fail
// DIAG: E-CON-0263
// SPEC: 15.3
// DESC: Mixed yield/non-yield handlers in race

procedure async1() -> Async<(), (), i32, !> {
    return 1
}

procedure async2() -> Async<i32, (), i32, !> {
    yield 2
    return 2
}

procedure do_race() -> i32 {
    return race { //~ ERROR E-CON-0263
        async1() => x { return x }
        async2() => yield y { yield y }
    }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
